--- a/index.html
+++ b/index.html
@@ -1,47 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adaptative Text</title>
+<html>
+    <head>
+        <title>Page Title</title>
+    </head>
+    <meta charset="utf-8"></meta>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
+        *{
+    margin:0;
+    padding:0;
+}
+body {
+    margin:1.8em;
+    font-family:sans-serif;
+    font-size:1.2em;
+    line-height:1.29;
+    background:#272727;
+    color:#fff;
+    animation-name:c;
+    animation-duration: 240s;
+}
 
-        body {
-            font-family: sans-serif;
-        }
+@keyframes c{
+    0%{
+        background:#272727;
+    }
+    25%{
+        background:#66024c;
+    }
+    50%{
+        background:#000
+    }
+    75%{
+        background:#960018;
+    }
+    100%{
+        background:#0583d2;
+    }
+}
 
-        #output {
-            white-space: pre;
-            color: #000;
-        }
-
-        .input {
-            font-family: sans-serif;
-            width: 100vw;
-            height: 100vh;
-            resize: none;
-            color: transparent;
-            background: transparent;
-            position: absolute;
-            top: 0;
-            left: 0;
-            border: none;
-            outline: none;
-        }
+p{
+    margin-top:2.4em;
+}
     </style>
-</head>
+    <body>
+    <p>Hola, antes que nada espero que se encuentre bien. Regaleme solo 6 minutos de su vida </p>
 
-<body>
-    <textarea class="input" id="input"></textarea>
-    <div id="output"></div>
-    <script src="./adaptativeText.js"></script>
-    <script src="./main.js"></script>
-</body>
+<p>Perdon por no darle la atenciÃ³n que merecÃ­a, las primeras semas cuando vine aun me sentia muy mal y no me quedaba tiempo para nada, literalmente era solo comer, dormir y trabajar; pero aun asi respondÃ­a, despues me fuÃ© quedando un poco mas de tiempo pero usted ya habÃ­a perdido el interes en mi. </p>
 
-</html>
+<p>En fin, el principal motivo de la carta es contarle la verdad, aunque no se si la leera porque me tiene bloqueado hasta el quinto universo elevado a infinito y ni siquiera dejo que le contara bien las cosas, o quiza ya no le importe leer mis pensamiento o no tenga 6 minutos disponibles, pero igual quiero desahogarme. </p>
+
+<p>Todo empezÃ³ cuando terminamos y me empezo a bloquear, dejo de hablar en el comedor, yo aun no hablaba con nadie y luego usted me desbloqueÃ³ y me acuerdo que vi un estado suyo donde salÃ­a con un muchacho y yo le respondi que tambiÃ©n iba a empezar hacer mis amistades. </p>
+
+<p>Fue a inicios o mediado de diciembre mas o menos que me llevaron a trabajar donde mi papÃ¡ y donde la yara habia llegado una muchacha nueva, jose me decia que le pidiera el numero para Ã©l porque a Ã©l le daba pena pedircelo para Ã©l mismo, entonces yo le dije que lo pidiera para mi y asi no le daba pena, despues ella me lo dio y empece a hablar con ella, pero hasta ahi nomas y ya ve como es el josÃ© que habla hasta por los codos y en eso para que se callara le dije que yo la habia ido a ver a ella y luego no se que se invento Ã©l. Ademas ella sabia que usted era mi "ex", pero ella no me creia porque nos veÃ­a abrazandonos y haciendonos cariacias en el comedor, al final le dije que habia regresado con usted, tambien que a ella le gustaba un muchacho de ahi por las gradas, no se quien era, y ademas hablaba con jose y ya no supe mas hasta que una vez la encontramos en el parque con brandom y medio hablamos y hasta ahi (y si, por cierto salia al parque con brandom o le hacia barra, se hizo un buen amigo para mi y tengo pruebas por si las quiere ver) </p>
+<p>
+No le voy a negar que hice amistades, que por cierto ya no las tengo desde mucho antes que me enfermara, y usted tambien tubo sus amistades y respeto eso. Y por mi vida le juro, que me vuela a enfermar de nuevo y que me muera, pero no he amasado a nadie de ninguna manera, ni como le contaron, ni fuera de la ralaciÃ³n y mucho menos dentro </p><p>
+
+Y yo se perfectamente que fuÃ© jose porque es la unica persona que sabe que trabajaba donde la yara y es la unica persona que sabe que yo le escribia a ella y la unica persona a la que le dije eso. </p>
+<p>
+Y yo sÃ© que a usted hay alguien que la quiere llegar a ver a la casa o llego a verla cuando se queda sola y yo sÃ© que ya esta conociendo a alguien mÃ¡s y sÃ© exactamente quien/es pueden ser y no le digo quien porque ira corriendo de inmediato a contarle. Estube releyendo sus ultimos mensajes en instagram y whatsapp, creame que logre encajar todas las piezas, ahora entiendo bien todo con algo que me dijeron, mÃ¡s con lo que me dijo usted y su actitud. La maldita intuiciÃ³n que tengo por desgracia me hace saber esas cosas, yo sÃ© que talvez no le importe lo que piense porque ya tiene a alguien mas. Es el mismo patron de siempre que se repite y creame... yo he estado en ese mismo patron de malinterpretaciones y uno se terminara arrepintiendo. </p><p>
+
+Solo me pregunto Â¿Por quÃ©? Por quÃ© se deja llevar por las cosas que le cuentan otros y no escuchar mi versiÃ³n, por quÃ© hoy ya de ultimo se va cuando yo ya me habia decidido estar con usted? Sabe... pensaba en no venir a los estados unidos, pero adivine quÃ©... intuiciÃ³n... y no me fallÃ³, usted me dejo tirado de nuevo, no pudo pasar ni siquiera 3 meses sin mi presencia y yo hasta me traje las pulseritas que me daba para sentir de cerca su amor porque aunque no hablaramos pensaba mucho en usted... y no, no la estoy manipulando, el que la manipula es otro u otras personas.. no lo sÃ©.</p><p>
+
+Y tengo suficientes pruebas para demostrar todo lo que le digo, con captura de chat y fotos y no me molestaria enseÃ±arle. </p>
+<p>
+Y usted tambien tiene buena intuiciÃ³n y me sorprende cada vez, pero sabe cual es la diferencia entre usted y yo? Que yo si aporto las pruebas y escucho sus versiones de lo que ha pasado y he confÃ­ado en usted porque se que aveces uno esta equivocado o le cuentan mal o demÃ¡s las cosas que no son. Y si quiere contarme su version de lo que pienso en los ultimos 3 parrafos arriba pues soy todo oido y podemos conversar. </p><p>
+
+Solo para terminar, esta semana que he estado sin saber nade de usted me he sentido igual que cuando me termino, todo mi maldito mundo y sueÃ±os derrumbandose poco a poco al saber que perdi a quien amo, llorando en las noches y escuchando las canciones que solÃ­a dedicarme solo para ahogarme aun mÃ¡s en mis lagrimas, una jodida ansiedad que, creame, ya no quiero estar asÃ­, pero la insertidumbre me mata aun mÃ¡s al no saber si este sera fin del bucle de las malas deciciones que hemos tomado por dejarnos llevar por las emociones y por las demas personas, sabiendo que hay dos caminos: un "adios para siempre" o un "te espero hasta que regreses". 
+</p><p>
+Solo confirme que soy para usted </p><p>
+
+Y bueno si es un "adios para siempre", que mi intuicion me dice que es muy, muy probable. No tenga pena, cuando regrese a el salvador no voy hacer que tropiece ni a meterme en su camino y se que puedeÂ  porque esta vez no estoy ahi para hacerle berrinche en frente jaja y si es asi me voy contento, no soy perfecto pero hice las cosas bien, no soy tan malo y al final le dÃ­ las rosas que tanto deseaba 
+</p><p>
+Y pues si tiene mas preguntas o dudas con gusto se las respondo sin censura, y si no quiere responde no pasa nada, yo implicitamente entiendo el sentido del cilencio y lo que significa</p>
+    
+        <p><strong>Att: Luis C.</strong></p>
+    </body>
+    </html>
