--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>Page Title</title>
+        <meta charset="UTF-8"></meta>
     </head>
-    <meta charset="utf-8"></meta>
+    
+    
     <style>
         *{
     margin:0;
