--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Y yo sé que a usted hay alguien que la quiere llegar a ver a la casa o ya llego
 
 Solo me pregunto ¿Por qué? Por qué se deja llevar por las cosas que le cuentan otros y no escuchar mi versión, por qué hoy ya de ultimo se va cuando yo ya me habia decidido estar con usted? Sabe... pensaba en no venir a los estados unidos, pero adivine qué... intuición... y no me falla, usted me dejo tirado de nuevo, no pudo pasar ni siquiera 3 meses sin mi presencia y yo hasta me traje las pulseritas que me daba para sentir de cerca su amor porque aunque no hablaramos pensaba mucho en usted... y no, no la estoy manipulando, el que la manipula es otro u otras personas.. no lo sé.</p><p>
 
-Y tengo suficientes pruebas para demostrar todo lo que le digo, con captura de chat y fotos y no me molestaria enseÃ±arle. </p>
+Y tengo suficientes pruebas para demostrar todo lo que le digo, con captura de chat y fotos y no me molestaria enseñarle. </p>
 <p>
 Y usted tambien tiene buena intuición y me sorprende cada vez, pero sabe cual es la diferencia entre usted y yo? Que yo si aporto las pruebas y escucho sus versiones de lo que ha pasado y he confído en usted porque se que aveces uno esta equivocado o le cuentan mal o demás las cosas que no son. Y si quiere contarme su version de lo que pienso en los ultimos 3 parrafos arriba pues soy todo oido y podemos conversar. </p><p>
 
@@ -71,7 +71,7 @@ Solo para terminar, esta semana que he estado sin saber nade de usted me he sent
 </p><p>
 Solo confirme que soy para usted </p><p>
 
-Y bueno si es un "adios para siempre", que mi intuicion me dice que es muy, muy probable. No tenga pena, cuando regrese a el salvador no voy hacer que tropiece ni a meterme en su camino y se que puede  porque esta vez no estoy ahi para hacerle berrinche en frente jaja y si es asi me voy contento, no soy perfecto pero hice las cosas bien, no soy tan malo y al final le dÃ­ las rosas que tanto deseaba 
+Y bueno si es un "adios para siempre", que mi intuicion me dice que es muy, muy probable. No tenga pena, cuando regrese a el salvador no voy hacer que tropiece ni a meterme en su camino y se que puede  porque esta vez no estoy ahi para hacerle berrinche en frente jaja y si es asi me voy contento, no soy perfecto pero hice las cosas bien, no soy tan malo y al final le dí las rosas que tanto deseaba 
 </p><p>
 Y pues si tiene mas preguntas o dudas con gusto se las respondo sin censura, y si no quiere responde no pasa nada, yo implicitamente entiendo el sentido del cilencio y lo que significa</p>
     
